--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,10 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "experimentalDecorators": true,
-    "strict": true,
-    "noImplicitReturns": true,
+    "strict": false,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
+    "strictNullChecks": false,
     "outDir": "target/classes/static/app",
     "lib": ["es2018", "dom"],
     "baseUrl": "./",
@@ -23,6 +24,7 @@
     "strictInjectionParameters": true,
     "strictTemplates": true,
     "strictInputAccessModifiers": true,
-    "preserveWhitespaces": true
+    "preserveWhitespaces": true,
+    "enableIvy": false
   }
 }
