--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@angular/common": "11.2.7",
     "@angular/compiler": "11.2.7",
     "@angular/core": "11.2.7",
+    "@angular/elements": "^11.2.13",
     "@angular/forms": "11.2.7",
     "@angular/localize": "11.2.7",
     "@angular/platform-browser": "11.2.7",
@@ -81,8 +82,10 @@
     "@ng-bootstrap/ng-bootstrap": "9.1.0",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
+    "angular-formio": "^4.11.5",
     "bootstrap": "4.6.0",
     "dayjs": "1.10.4",
+    "ng-factory": "^1.1.0",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "7.0.1",
     "rxjs": "6.6.7",
