--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "angular-formio": "^4.11.5",
     "bootstrap": "4.6.0",
     "dayjs": "1.10.4",
-    "ng-factory": "^1.1.0",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "7.0.1",
     "rxjs": "6.6.7",
